package enumeraciones;
import java.io.Serializable;
public enum Puesto implements Serializable {
    //Atributos
    DEL, MED, DEF, ARQ
}