package interfaces;
import org.json.JSONObject;
public interface IExportarJson {
    JSONObject exportarJson();
}