@startuml
Torneo <--> Fecha
Torneo <----> Equipo
Torneo <-----> Jugador
Fecha <--> PartidoFutbol
PartidoFutbol <--> Equipo
Equipo <--> Jugador
Equipo <--> Tecnico
Jugador <-> Puesto
enum Puesto {
    DEL
    MED
    DEF
    ARQ
}
interface IExportarJson {
    + exportarJson() : JSONObject
}
class Torneo implements IExportarJson {
    - nombre : String
    - temporada : int
    - fixture : Contenedor<Fecha>
    - tabla : Contenedor<Equipo>
    - goleadores : Contenedor<Jugador>
    + getNombre() : String
    + getTemporada() : int
    + getFixture() : Contenedor<Fecha>
    + getTabla() : Contenedor<Equipo>
    + agregarEquipo(equipo : Equipo) : void
    + agregarFixture(fixtureAux : Contenedor<Fecha>) : void
    + agregarGoleadores(goleadoresAux : Contenedor<Jugador>) : void
    - devolverTabla() : String
    + devolverFixtureEquipo(nombre : String) : String
    + devolverGoleadores() : String
    + toString() : String
    + exportarJson() : JSONObject
}
class Fecha {
    - numeroFecha : int
    - partidos : Contenedor<PartidoFutbol>
    + getNumeroFecha() : int
    + getPartidos() : Contenedor<PartidoFutbol>
    + toString() : String
}
class PartidoFutbol {
    - local : Equipo
    - visitante : Equipo
    - golesL : int
    - golesV : int
    + getLocal() : Equipo
    + getVisitante() : Equipo
    + getGolesL() : int
    + getGolesV() : int
    + toString() : String
}
class Equipo implements IExportarJson {
    - idEquipo : int
    - nombre : String
    - tecnico : Tecnico
    - jugadores : Contenedor<Jugador>
    - puntos : int
    - partidosJugados : int
    - partidosGanados : int
    - partidosEmpatados : int
    - partidosPerdidos : int
    - golesAFavor : int
    - golesEnContra : int
    - diferenciaGoles : int
    + getIdEquipo() : int
    + getNombre() : String
    + getTecnico() : Tecnico
    + getJugadores() : Contenedor<Jugador>
    + getPuntos() : int
    + getPartidosJugados() : int
    + getPartidosGanados() : int
    + getPartidosEmpatados() : int
    + getPartidosPerdidos() : int
    + getGolesAFavor() : int
    + getGolesEnContra() : int
    + getDiferenciaGoles() : int
    + devolverEquipoCompleto(pos : int) : String
    + toString() : String
    + exportarJson() : JSONObject
}
abstract class Persona {
    - nombre : String
    - edad : int
    + getNombre() : String
    + getEdad() : int
    + toString() : String
}
class Jugador extends Persona {
    - puesto : Puesto
    - numero : int
    - goles : int
    + getPuesto() : Puesto
    + getNumero() : int
    + setGoles(golesAux : int) : void
    + getGoles() : int
    - establecerPuesto(puestoAux : String) : Puesto
    + toString() : String
}
class Tecnico extends Persona {
    - trayectoria : Contenedor<String>
    + getTrayectoria() : Contenedor<String>
    + toString() : String
}
@enduml